sandbox/output
StringCalculatorTest.java:8: error: method add in class StringCalculator cannot be applied to given types;
        assertEquals(0, StringCalculator.add(""));
                                        ^
  required: String,StringCalculatorParser
  found: String
  reason: actual and formal argument lists differ in length
1 error
